--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -25,6 +25,7 @@
     "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-breadcrumbs-dynamic": "^1.2.0",
     "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.3",
     "react-lazy-load-image-component": "^1.3.2",
