--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "^3.9.2",
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
+    "history": "^4.9.0",
     "http-server": "^0.11.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
@@ -31,6 +32,7 @@
     "react-lazy-load-image-component": "^1.3.2",
     "react-lazyload": "^2.5.0",
     "react-loadable": "^5.5.0",
+    "react-recaptcha": "^2.3.10",
     "react-redux": "^6.0.1",
     "react-redux-loading-bar": "^4.2.0",
     "react-router-dom": "^4.3.1",
