--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -35,6 +35,7 @@
     "react-recaptcha": "^2.3.10",
     "react-redux": "^6.0.1",
     "react-redux-loading-bar": "^4.2.0",
+    "react-router": "^5.0.0",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.9.0",
     "redux": "^4.0.1",
