--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -28,6 +28,7 @@
     "react": "^16.8.3",
     "react-breadcrumbs-dynamic": "^1.2.0",
     "react-content-loader": "^4.2.1",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.8.3",
     "react-lazy-load-image-component": "^1.3.2",
     "react-lazyload": "^2.5.0",
