--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -15,17 +15,22 @@
   "author": "team",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "history": "^4.9.0",
     "http-server": "^0.11.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
+    "jwt-decode": "^2.2.0",
+    "mui-datatables": "^2.0.0",
     "node-uuid": "^1.4.8",
     "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-bootstrap-table-next": "^3.1.1",
     "react-breadcrumbs-dynamic": "^1.2.0",
     "react-content-loader": "^4.2.1",
     "react-document-title": "^2.0.3",
