--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/lab": "^3.0.0-alpha.30",
     "axios": "^0.18.0",
+    "ckeditor4-react": "^0.1.1",
     "clsx": "^1.0.4",
     "font-awesome": "^4.7.0",
     "history": "^4.9.0",
