--- a/Back-end/src/main/resources/application.yml
+++ b/Back-end/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:mysql://localhost:3306/manage?zeroDateTimeBehavior=convertToNull&autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: root
+    username: manage
     password: huyducc4
     hikari:
       auto-commit: false
